--- a/src/shop/css/style.css
+++ b/src/shop/css/style.css
@@ -7,182 +7,191 @@ color banner top : #F2EDE9
 * {
     font-family: 'Roboto', sans-serif;
 }
-h1 {
-    display: inline;
-}
-.root {
-    padding-top: 50px;
-    padding-left: 20%;
-}
-.circle {
-    width: 5px;
-    height: auto;
-    position: relative;
-    top: -3px;
-    padding-left: 5px;
-    padding-right: 5px;
-}
-.section-title {
-    display: inline-block;
-    padding-left: 20%;
-    padding-top: 30px;
-}
-.parameters {
-    display: inline-block;
-    padding-left: 800px;
-    position: relative;
-    top: -36px;
-}
-.parameters1 {
-    padding-right: 50px;
-}
-.parameters2 {
-    padding-right:  50px;
-}
-.down-arrow {
-    width: 2%;
-    height: auto;
-    display: inline-block;
-    padding-right: 10px;
-    padding-left: 50px;
-}
-.up-arrow {
-    width: 2%;
-    height: auto;
-    display: inline-block;
-    padding-right: 20px;
-}
-.menu {
-    width: 2%;
-    height: auto;
-    display: inline-block;
-    padding-right: 5px;
-}
-.show {
-    width: 2.5%;
-    height: auto;
-    position: relative;
-    bottom: -1px;
-    display: inline-block;
-}
+@media only screen and (max-width: 768px) {
 
-.parent {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: auto;
-    grid-column-gap: 20px;
-    grid-row-gap: 50px;
-    width: min-content;
-    padding-left: 20%;
-    float: left;
-    
 }
-    
-.div1 { grid-area: 1 / 1 / 2 / 2;
-}
-.div2 { grid-area: 1 / 2 / 2 / 3; 
-}
-.div3 { grid-area: 1 / 3 / 2 / 4;  
-}
-.div4 { grid-area: 2 / 1 / 3 / 2; 
-}
-.div5 { grid-area: 2 / 2 / 3 / 3; 
-}
-.div6 { grid-area: 2 / 3 / 3 / 4; 
-}
-.div7 { grid-area: 3 / 1 / 4 / 2; 
-}
-.div8 { grid-area: 3 / 2 / 4 / 3; 
-}
-.div9 { grid-area: 3 / 3 / 4 / 4; 
-}
-.div10 { grid-area: 4 / 1 / 5 / 2; 
-}
-.div11 { grid-area: 4 / 2 / 5 / 3; 
-}
-.div12 { grid-area: 4 / 3 / 5 / 4; 
-}
+@media only screen and (min-width: 768px) and (max-width: 992px) {
 
-.star {
-    width: 5%;
-    height: auto;
-    display: inline-block;
-    padding-bottom: 10px;
 }
-.color-choice {
-    width: 5%;
-    height: auto;
-    padding-right: 2px;
-    border-radius: 50%;
-}
-.bold {
-    font-weight: bolder;
-    padding-bottom: 10px;
-}
-.line {
-    text-decoration: line-through;
-    color: gray;
-}
-.size-choice {
-    width: 10%;
-    height: auto;
-    display: inline-block;
-    padding-right: 2px;
-    border-radius: 50%;
-    background-color: rgb(182, 182, 182);
-}
-.underline {
-    text-decoration: underline;
-    display: inline;
-}
-.next {
-    width: 1%;
-    height: auto;
-    display: inline-block;
-}
-.size-selector {
-    width: 5%;
-    height: auto;
-    border: 1px solid grey;
-    padding-left: 5px;
-    padding-right: 5px;
-}
-.grey-text {
-    color: gray;
-    padding-bottom: 10px;
-}
-.black-text {
-    color: black;
-    font-weight: bold;
-    padding-bottom: 10px;
-}
-.prix {
-    color: grey;
-    padding-bottom: 5px;
-}
-.nouveau-prix {
-    color: black;
-    padding-left: 5px;
-}
-.color {
-    width: 1%;
-    height: auto;
-    padding-right: 2px;
-    border-radius: 50%;
-}
-.item {
-    padding-bottom: 20px;
-}
-.page-number {
-    width: 100%;
-    display: inline-block;
-    position: relative;
-    bottom: -50%;
-    left: -5%;
-    text-align: center;
-    
-}
-aside {
-    float: left;
-    width: min-content;
+@media only screen and (min-width: 992px) {
+    h1 h2 h3{
+        display: inline-block;
+    }
+    .root {
+        padding-top: 50px;
+        padding-left: 12%;
+    }
+    .circle {
+        width: 5px;
+        height: auto;
+        position: relative;
+        top: -3px;
+        padding-left: 5px;
+        padding-right: 5px;
+    }
+    .section-title {
+        display: inline-block;
+        padding-left: 12%;
+        padding-top: 30px;
+    }
+    .parameters {
+        display: inline-block;
+        padding-left: 400px;
+        position: relative;
+        
+    }
+    .parameters1 {
+        padding-right: 50px;
+    }
+    .parameters2 {
+        padding-right:  50px;
+    }
+    .down-arrow {
+        width: 20px;
+        height: auto;
+        display: inline-block;
+        padding-right: 10px;
+        padding-left: 50px;
+    }
+    .up-arrow {
+        width: 20px;
+        height: auto;
+        display: inline-block;
+        padding-right: 20px;
+    }
+    .menu {
+        width: 20px;
+        height: auto;
+        display: inline-block;
+        padding-right: 5px;
+    }
+    .show {
+        width: 20px;
+        height: auto;
+        position: relative;
+        bottom: -1px;
+        display: inline-block;
+    }
+
+    .parent {
+        display: grid;
+        grid-template-columns: repeat(3, 300px);
+        grid-template-rows: auto;
+        grid-column-gap: 20px;
+        grid-row-gap: 50px;
+        margin-left: 12%;
+        float: left;
+        
+    }
+        
+    .div1 { grid-area: 1 / 1 / 2 / 2;
+    }
+    .div2 { grid-area: 1 / 2 / 2 / 3; 
+    }
+    .div3 { grid-area: 1 / 3 / 2 / 4;  
+    }
+    .div4 { grid-area: 2 / 1 / 3 / 2; 
+    }
+    .div5 { grid-area: 2 / 2 / 3 / 3; 
+    }
+    .div6 { grid-area: 2 / 3 / 3 / 4; 
+    }
+    .div7 { grid-area: 3 / 1 / 4 / 2; 
+    }
+    .div8 { grid-area: 3 / 2 / 4 / 3; 
+    }
+    .div9 { grid-area: 3 / 3 / 4 / 4; 
+    }
+    .div10 { grid-area: 4 / 1 / 5 / 2; 
+    }
+    .div11 { grid-area: 4 / 2 / 5 / 3; 
+    }
+    .div12 { grid-area: 4 / 3 / 5 / 4; 
+    }
+
+    .star {
+        width: 5%;
+        height: auto;
+        display: inline-block;
+        padding-bottom: 10px;
+    }
+    .color-choice {
+        width: 5%;
+        height: auto;
+        padding-right: 2px;
+        border-radius: 50%;
+    }
+    .bold {
+        font-weight: bolder;
+        padding-bottom: 10px;
+    }
+    .line {
+        text-decoration: line-through;
+        color: gray;
+    }
+    .size-choice {
+        width: 10%;
+        height: auto;
+        display: inline-block;
+        padding-right: 2px;
+        border-radius: 50%;
+        background-color: rgb(182, 182, 182);
+    }
+    .underline {
+        text-decoration: underline;
+        display: inline;
+    }
+    .next {
+        width: 1%;
+        height: auto;
+        display: inline-block;
+    }
+    .size-selector {
+        width: 50px;
+        height: auto;
+        border: 1px solid grey;
+        padding-left: 5px;
+        padding-right: 5px;
+    }
+    .grey-text {
+        color: gray;
+        padding-bottom: 10px;
+    }
+    .black-text {
+        color: black;
+        font-weight: bold;
+        padding-bottom: 10px;
+    }
+    .prix {
+        color: grey;
+        padding-bottom: 5px;
+    }
+    .nouveau-prix {
+        color: black;
+        padding-left: 5px;
+    }
+    .color {
+        width: 20px;
+        height: auto;
+        padding-right: 2px;
+        border-radius: 50%;
+    }
+    .item {
+        padding-bottom: 20px;
+    }
+    .page-number {
+        padding-left: 35%;
+        display: block;
+        clear: both;
+        width: auto;
+        padding-bottom: 10px;
+    }
+    .aside {
+        float: left;
+        padding: none;
+        margin: none;
+        padding-left: 1%;
+        width: auto;
+        max-width: 100%;
+    }
 }
