--- a/src/shop/css/style.css
+++ b/src/shop/css/style.css
@@ -7,191 +7,246 @@ color banner top : #F2EDE9
 * {
     font-family: 'Roboto', sans-serif;
 }
-@media only screen and (max-width: 768px) {
-
+h1 h2 h3{
+    display: inline-block;
 }
-@media only screen and (min-width: 768px) and (max-width: 992px) {
-
+.root {
+    padding-top: 50px;
 }
-@media only screen and (min-width: 992px) {
-    h1 h2 h3{
-        display: inline-block;
-    }
+.circle {
+    width: 5px;
+    height: auto;
+    position: relative;
+    top: -3px;
+    padding-left: 5px;
+    padding-right: 5px;
+}
+.section-title {
+    display: inline-block;
+    padding-top: 30px;
+}
+.parameters {
+    display: inline-block;
+    position: relative;
+    
+}
+.parameters1 {
+    padding-right: 50px;
+}
+.parameters2 {
+    padding-right:  50px;
+}
+.down-arrow {
+    width: 20px;
+    height: auto;
+    display: inline-block;
+    padding-right: 10px;
+    padding-left: 50px;
+}
+.up-arrow {
+    width: 20px;
+    height: auto;
+    display: inline-block;
+    padding-right: 20px;
+}
+.menu {
+    width: 20px;
+    height: auto;
+    display: inline-block;
+    padding-right: 5px;
+}
+.show {
+    width: 20px;
+    height: auto;
+    position: relative;
+    bottom: -1px;
+    display: inline-block;
+}
+.star {
+    width: 12px;
+    height: auto;
+    display: inline-block;
+    padding-bottom: 10px;
+}
+.color-choice {
+    width: 12px;
+    height: auto;
+    padding-right: 2px;
+    border-radius: 50%;
+}
+.bold {
+    font-weight: bolder;
+    padding-bottom: 10px;
+}
+.line {
+    text-decoration: line-through;
+    color: gray;
+}
+.size-choice {
+    width: 12px;
+    height: auto;
+    display: inline-block;
+    padding-right: 2px;
+    border-radius: 50%;
+    background-color: rgb(182, 182, 182);
+}
+.underline {
+    text-decoration: underline;
+    display: inline;
+}
+.next {
+    width: 1%;
+    height: auto;
+    display: inline-block;
+}
+.size-selector {
+    width: 50px;
+    height: auto;
+    border: 1px solid grey;
+    padding-left: 5px;
+    padding-right: 5px;
+}
+.grey-text {
+    color: gray;
+    padding-bottom: 10px;
+}
+.black-text {
+    color: black;
+    font-weight: bold;
+    padding-bottom: 10px;
+}
+.prix {
+    color: grey;
+    padding-bottom: 5px;
+}
+.nouveau-prix {
+    color: black;
+    padding-left: 5px;
+}
+.color {
+    width: 20px;
+    height: auto;
+    padding-right: 2px;
+    border-radius: 50%;
+}
+.item {
+    padding-bottom: 20px;
+}
+.page-number {
+    padding-left: 35%;
+    display: block;
+    clear: both;
+    width: auto;
+    padding-bottom: 10px;
+}
+.aside {
+    float: left;
+    padding: none;
+    margin: none;
+    padding-left: 1%;
+    width: auto;
+    max-width: 100%;
+}
+
+@media only screen and (max-width: 600px) {
     .root {
-        padding-top: 50px;
-        padding-left: 12%;
-    }
-    .circle {
-        width: 5px;
-        height: auto;
-        position: relative;
-        top: -3px;
-        padding-left: 5px;
-        padding-right: 5px;
+        padding-left: 1%;
     }
     .section-title {
-        display: inline-block;
-        padding-left: 12%;
-        padding-top: 30px;
+        padding-left: 1%;
     }
     .parameters {
-        display: inline-block;
-        padding-left: 400px;
+        padding-left: 1%;
+        display: block;
         position: relative;
+        padding-bottom: 10px;
+    }
+    .parent {
+        display: grid;
+        grid-template-columns: repeat(1, 300px);
+        grid-template-rows: auto;
+        grid-column-gap: 20px;
+        grid-row-gap: 50px;
+        margin-left: 1%;
+        float: left;
         
     }
-    .parameters1 {
-        padding-right: 50px;
+    .div1 { grid-area: 1 / 1 / 2 / 2; }
+    .div2 { grid-area: 2 / 1 / 3 / 2; }
+    .div3 { grid-area: 3 / 1 / 4 / 2; }
+    .div4 { grid-area: 4 / 1 / 5 / 2; }
+    .div5 { grid-area: 5 / 1 / 6 / 2; }
+    .div6 { grid-area: 6 / 1 / 7 / 2; }
+    .div7 { grid-area: 7 / 1 / 8 / 2; }
+    .div8 { grid-area: 8 / 1 / 9 / 2; }
+    .div9 { grid-area: 9 / 1 / 10 / 2; }
+    .div10 { grid-area: 10 / 1 / 11 / 2; }
+    .div11 { grid-area: 11 / 1 / 12 / 2; }
+    .div12 { grid-area: 12 / 1 / 13 / 2; }
+}
+@media only screen and (min-width: 600px) and (max-width: 992px) {
+    .root {
+        padding-left: 1%;
     }
-    .parameters2 {
-        padding-right:  50px;
+    .section-title {
+        padding-left: 1%;
     }
-    .down-arrow {
-        width: 20px;
-        height: auto;
-        display: inline-block;
-        padding-right: 10px;
-        padding-left: 50px;
+    .parameters {
+        padding-left: 80px;
     }
-    .up-arrow {
-        width: 20px;
-        height: auto;
-        display: inline-block;
-        padding-right: 20px;
+    .parent {
+        display: grid;
+        grid-template-columns: repeat(2, 300px);
+        grid-template-rows: auto;
+        grid-column-gap: 20px;
+        grid-row-gap: 50px;
+        margin-left: 1%;
+        float: left;
+        
     }
-    .menu {
-        width: 20px;
-        height: auto;
-        display: inline-block;
-        padding-right: 5px;
+    .div1 { grid-area: 1 / 1 / 2 / 2; }
+    .div2 { grid-area: 1 / 2 / 2 / 3; }
+    .div3 { grid-area: 2 / 1 / 3 / 2; }
+    .div4 { grid-area: 2 / 2 / 3 / 3; }
+    .div5 { grid-area: 3 / 1 / 4 / 2; }
+    .div6 { grid-area: 3 / 2 / 4 / 3; }
+    .div7 { grid-area: 4 / 1 / 5 / 2; }
+    .div8 { grid-area: 4 / 2 / 5 / 3; }
+    .div9 { grid-area: 5 / 1 / 6 / 2; }
+    .div10 { grid-area: 5 / 2 / 6 / 3; }
+    .div11 { grid-area: 6 / 1 / 7 / 2; }
+    .div12 { grid-area: 6 / 2 / 7 / 3; }
+}
+@media only screen and (min-width: 992px) {
+    .root {
+        padding-left: 10%;
     }
-    .show {
-        width: 20px;
-        height: auto;
-        position: relative;
-        bottom: -1px;
-        display: inline-block;
+    .section-title {
+        padding-left: 10%;
     }
-
+    .parameters {
+        padding-left: 400px;
+    }
     .parent {
         display: grid;
         grid-template-columns: repeat(3, 300px);
         grid-template-rows: auto;
         grid-column-gap: 20px;
         grid-row-gap: 50px;
-        margin-left: 12%;
+        margin-left: 10%;
         float: left;
         
     }
-        
-    .div1 { grid-area: 1 / 1 / 2 / 2;
+    .div1 { grid-area: 1 / 1 / 2 / 2;}
+    .div2 { grid-area: 1 / 2 / 2 / 3;}
+    .div3 { grid-area: 1 / 3 / 2 / 4;}
+    .div4 { grid-area: 2 / 1 / 3 / 2;}
+    .div5 { grid-area: 2 / 2 / 3 / 3;}
+    .div6 { grid-area: 2 / 3 / 3 / 4;}
+    .div7 { grid-area: 3 / 1 / 4 / 2;}
+    .div8 { grid-area: 3 / 2 / 4 / 3;}
+    .div9 { grid-area: 3 / 3 / 4 / 4;}
+    .div10 { grid-area: 4 / 1 / 5 / 2;}
+    .div11 { grid-area: 4 / 2 / 5 / 3;}
+    .div12 { grid-area: 4 / 3 / 5 / 4;}
     }
-    .div2 { grid-area: 1 / 2 / 2 / 3; 
-    }
-    .div3 { grid-area: 1 / 3 / 2 / 4;  
-    }
-    .div4 { grid-area: 2 / 1 / 3 / 2; 
-    }
-    .div5 { grid-area: 2 / 2 / 3 / 3; 
-    }
-    .div6 { grid-area: 2 / 3 / 3 / 4; 
-    }
-    .div7 { grid-area: 3 / 1 / 4 / 2; 
-    }
-    .div8 { grid-area: 3 / 2 / 4 / 3; 
-    }
-    .div9 { grid-area: 3 / 3 / 4 / 4; 
-    }
-    .div10 { grid-area: 4 / 1 / 5 / 2; 
-    }
-    .div11 { grid-area: 4 / 2 / 5 / 3; 
-    }
-    .div12 { grid-area: 4 / 3 / 5 / 4; 
-    }
-
-    .star {
-        width: 5%;
-        height: auto;
-        display: inline-block;
-        padding-bottom: 10px;
-    }
-    .color-choice {
-        width: 5%;
-        height: auto;
-        padding-right: 2px;
-        border-radius: 50%;
-    }
-    .bold {
-        font-weight: bolder;
-        padding-bottom: 10px;
-    }
-    .line {
-        text-decoration: line-through;
-        color: gray;
-    }
-    .size-choice {
-        width: 10%;
-        height: auto;
-        display: inline-block;
-        padding-right: 2px;
-        border-radius: 50%;
-        background-color: rgb(182, 182, 182);
-    }
-    .underline {
-        text-decoration: underline;
-        display: inline;
-    }
-    .next {
-        width: 1%;
-        height: auto;
-        display: inline-block;
-    }
-    .size-selector {
-        width: 50px;
-        height: auto;
-        border: 1px solid grey;
-        padding-left: 5px;
-        padding-right: 5px;
-    }
-    .grey-text {
-        color: gray;
-        padding-bottom: 10px;
-    }
-    .black-text {
-        color: black;
-        font-weight: bold;
-        padding-bottom: 10px;
-    }
-    .prix {
-        color: grey;
-        padding-bottom: 5px;
-    }
-    .nouveau-prix {
-        color: black;
-        padding-left: 5px;
-    }
-    .color {
-        width: 20px;
-        height: auto;
-        padding-right: 2px;
-        border-radius: 50%;
-    }
-    .item {
-        padding-bottom: 20px;
-    }
-    .page-number {
-        padding-left: 35%;
-        display: block;
-        clear: both;
-        width: auto;
-        padding-bottom: 10px;
-    }
-    .aside {
-        float: left;
-        padding: none;
-        margin: none;
-        padding-left: 1%;
-        width: auto;
-        max-width: 100%;
-    }
-}
