--- a/src/css/style.css
+++ b/src/css/style.css
@@ -15,6 +15,10 @@ a {
   color: #222;
 }
 
+header p {
+  color: #999;
+}
+
 .header {
   display: flex;
   flex-flow: row wrap;
@@ -104,6 +108,7 @@ a {
 }
 
 .header__icon {
+  z-index: 11;
   /*Hamburger Background*/
 }
 .header__icon--menuwrap {
@@ -178,9 +183,9 @@ a {
 }
 .header__icon--menuwrap--menu {
   position: fixed;
-  top: 0;
-  left: 5%;
-  width: 80%;
+  top: 90px;
+  left: 0;
+  width: 100%;
   height: 100%;
   margin: auto;
   visibility: hidden;
@@ -190,10 +195,11 @@ a {
   justify-content: center;
 }
 .header__icon--menuwrap--menu > div {
-  background: #coral;
-  border-radius: 50%;
+  position: absolute;
+  z-index: 10;
+  background: white;
   width: 200vw;
-  height: 200vw;
+  height: 200vh;
   display: flex;
   flex: none;
   align-items: center;
@@ -226,40 +232,42 @@ a {
 }
 
 .footer {
+  z-index: 1;
   position: absolute;
   width: 100%;
   bottom: 0;
   height: 350px;
-  border: solid;
+  margin: 0 10%;
   justify-content: center;
 }
-.footer .up {
-  position: relative;
-  width: 100%;
-  display: flex;
+.footer .nonephone {
+  display: none;
+}
+.footer .left {
+  display: block;
+  float: left;
+  width: 49%;
   height: 200px;
-  justify-content: center;
 }
-.footer .down {
-  width: 100%;
-  display: flex;
-  height: 150px;
+.footer .right {
+  display: block;
+  float: right;
+  width: 50%;
+  height: 200px;
 }
 .footer__contact {
   color: #999;
   height: 200px;
-  margin-right: 10%;
 }
 .footer__list {
   position: relative;
   height: 70%;
   font-size: 12px;
-  margin: 0 3%;
   color: #999;
 }
 .footer__list h3 {
+  text-align: left;
   margin-bottom: 40px;
-  margin-right: 90px;
   color: #000;
 }
 .footer__list > ul > li {
@@ -273,8 +281,8 @@ a {
   justify-content: center;
 }
 .footer__icon > div {
+  border-top: 1px solid;
   align-self: center;
-  margin-right: 15%;
 }
 .footer__icon ul > li {
   display: inline-block;
@@ -283,7 +291,7 @@ a {
   color: #999;
 }
 
-@media screen and (max-width: 968px) {
+@media screen and (max-width: 800px) {
   .header {
     background: #fff;
   }
@@ -291,7 +299,7 @@ a {
 .header__item:hover {
   transform: scale(1.04);
 }
-@media screen and (min-width: 968px) {
+@media screen and (min-width: 800px) {
   .header__icon--menuwrap {
     background-color: #F2EDE9;
     display: none;
@@ -300,15 +308,36 @@ a {
 .header__icon--search {
   display: block;
 }
-@media screen and (min-width: 968px) {
+@media screen and (min-width: 800px) {
   .header__icon--search {
     display: none;
   }
 }
-.header p {
-  color: #999;
-}
 
+@media screen and (min-width: 800px) {
+  .footer .nonephone {
+    display: flex;
+  }
+  .footer .nonedesk {
+    display: none;
+  }
+  .footer .up {
+    position: relative;
+    width: 100%;
+    display: flex;
+    height: 200px;
+    justify-content: center;
+  }
+  .footer .down {
+    width: 100%;
+    display: flex;
+    height: 150px;
+  }
+  .footer__list {
+    margin: 0% 3%;
+  }
+}
+/* retourner une image */
 .reverse {
   transform: rotateZ(90deg);
 }
