--- a/src/scss/_state.scss
+++ b/src/scss/_state.scss
@@ -1,7 +1,7 @@
 
 .header{
     
-  @media screen and (max-width: 968px){
+  @media screen and (max-width: 800px){
       background: #fff;
     }
   
@@ -12,7 +12,7 @@
 
   &__icon {
     &--menuwrap{
-        @media screen and (min-width: 968px) {
+        @media screen and (min-width: 800px) {
         background-color: $color-banner;
         display: none;
         
@@ -21,18 +21,42 @@
     
     &--search{
       display: block;
-      @media screen and (min-width: 968px) {
+      @media screen and (min-width: 800px) {
         display: none;
       }
     }
   }
+}
+@media screen and (min-width: 800px){
+  .footer{
+    .nonephone{
+      display: flex;
+    }
 
-  p{
-    color: #999;
+    .nonedesk{
+      display: none;
+    }
+
+    .up{
+      position: relative;
+      width: 100%;
+      display: flex;
+      height: 200px;
+      justify-content: center;
+    }
+
+    .down{
+      width: 100%;
+      display: flex;
+      height: 150px;
+   } 
+
+   &__list {
+    margin: 0% 3%;
+   }
   }
 }
-
+ /* retourner une image */
 .reverse{
   transform: rotateZ(90deg);
 }
-
