--- a/src/scss/modules/Footer/_footer.scss
+++ b/src/scss/modules/Footer/_footer.scss
@@ -1,43 +1,48 @@
 .footer{
+    z-index: 1;
     position: absolute;
     width: 100%;
     bottom: 0;
     height: 350px;
-    border: $border;
+    margin: 0 10%;
 
     justify-content: center;
 
-    .up{
-        position: relative;
-        width: 100%;
-        display: flex;
-        height: 200px;
-        justify-content: center;
+    .nonephone{
+        display: none;
     }
 
-    .down{
-        width: 100%;
-        display: flex;
-        height: 150px;
-    }
+    .left{
+        display: block;
+        float: left;
+        width: 49%;
+        height: 200px;
+      }
+
+    .right{
+        display: block;
+        float: right;
+        width: 50%;
+        height: 200px;
+      }
+
+
 
     &__contact {
         color: #999;
         height: 200px;
-        margin-right: 10%;
     }
 
     &__list {
         position: relative;
         height: 70%;
         font-size: 12px;
-        margin: 0 3%;
         color: #999;
         
 
         & h3{
+            text-align: left;
             margin-bottom: 40px;
-            margin-right: 90px;
             color: #000
 
         }
@@ -54,10 +59,10 @@
         width: 100%;
         justify-content: center;
         
-        
+
         > div {
+            border-top: 1px solid;
             align-self: center;
-            margin-right: 15%;
         }
 
         ul > li {
