--- a/src/scss/modules/_menu.scss
+++ b/src/scss/modules/_menu.scss
@@ -1,5 +1,8 @@
+
+
 .header {
   &__icon {
+    z-index: 11;
 
     /*Hamburger Background*/
     &--menuwrap {
@@ -88,9 +91,9 @@
       /*  positionning  */
       &--menu{
         position: fixed;
-        top: 0;
-        left: 5%;
-        width: 80%;
+        top: 90px;
+        left: 0;
+        width: 100%;
         height: 100%;
         margin: auto;
         visibility: hidden;
@@ -99,11 +102,13 @@
         align-items: center;  
         justify-content: center;
         
+        
         & > div {
-          background: #coral;
-          border-radius: 50%;
+          position: absolute;
+          z-index: 10;
+          background: rgba(255, 255, 255 , 1); 
           width: 200vw;
-          height: 200vw;
+          height: 200vh;
           display: flex;
           flex: none;
           align-items: center;
